Added some gulp plugins

--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "Gulp Test",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-live-server": "0.0.30",
+    "gulp-sass": "^2.3.2"
   }
 }
